--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -247,16 +247,17 @@ img {
 /*BUTTONS*/
 .button {
   display: inline-block;
-  background-color: var(--first-color);
-  color: #fff;
+  background-color: #333; /* Change to black */
+  color: #ddd; /* Change to light grey */
   padding: .75rem 2.5rem;
   font-weight: var(--font-semi);
   border-radius: .5rem;
   transition: .3s;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); /* Added box-shadow for shine effect */
 }
 
 .button:hover {
-  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.25); /* Adjusted box-shadow on hover for more depth */
 }
 
 /* ===== ABOUT =====*/
