--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,7 +44,12 @@
 html {
   scroll-behavior: smooth;
 }
-
+/* ===HEADER--- */
+.l-header {
+  background-color: #333; /* Black background color */
+  padding: 20px; /* Adjust padding as needed */
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); /* Box shadow for depth */
+}
 body {
   background: #e1e1e6;
   
@@ -277,6 +282,11 @@ img {
 .about__img img {
   width: 200px;
   border-radius: .5rem;
+}
+.about__text {
+  width: 300px;
+  height: 400px;
+  overflow: hidden; /* Optional: Hide any content that overflows the specified dimensions */
 }
 
 /* ===== SKILLS =====*/
