--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,11 +45,7 @@ html {
   scroll-behavior: smooth;
 }
 /* ===HEADER--- */
-.l-header {
-  background-color: #333; /* Black background color */
-  padding: 20px; /* Adjust padding as needed */
-  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); /* Box shadow for depth */
-}
+
 body {
   background: #e1e1e6;
   
@@ -117,7 +113,7 @@ img {
   margin-right: var(--mb-2);
 }
 
-.l-header {
+/* .l-header {
   width: 100%;
   position: fixed;
   top: 0;
@@ -125,6 +121,21 @@ img {
   z-index: var(--z-fixed);
   background-color: #fff;
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
+} */
+.l-header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: var(--z-fixed);
+    background-color: var(--second-color); /* Match the background color of the footer */
+    color: #fff; /* Text color */
+    text-align: center; /* Align text to the center */
+    font-weight: var(--font-semi); /* Set font weight */
+    padding: 2rem 0; /* Padding top and bottom */
+
+    /* Shadow */
+    box-shadow: 0 1px 4px rgba(146,161,176,.15);
 }
 
 /*===== NAV =====*/
