--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,16 +37,16 @@
 }
                 /* Embedding
                 embedding */
-                .list-inline-item {
-                  display: inline;
-                  margin-right: 10px; /* Adjust as needed for spacing between items */
-              }
-              
-              .nav-link {
-                  color: #007bff; /* Adjust the color as needed */
-                  text-decoration: none;
-                  font-weight: bold; /* Adjust the font weight as needed */
-              }
+.list-inline-item {
+    display: inline;
+    margin-right: 10px; /* Adjust as needed for spacing between items */
+}
+
+.nav-link {
+    color: #000000; /* Shiny black color */
+    text-decoration: none;
+    font-weight: bold; /* Adjust the font weight as needed */
+}
 
 /*===== BASE =====*/
 *, ::before, ::after {
